--- a/src/public/index.html
+++ b/src/public/index.html
@@ -17,7 +17,7 @@
 
       .container {
         max-width: 50rem;
-        min-height: 100vh;
+        min-height: 100dvh;
         margin: 0 auto;
         padding: 2rem;
         display: flex;
